--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <header>
   <div style="background-color: #61f4d2;">
     <h1>My portfolio</h1>
-    <h2>Maadeha Shaikh :<span> a Web Developer</span> </h2>
+    <h2>Maadeha Shaikh :
+    <span> a Web Developer</span> </h2>
     <hr>
   </div>
 </header>
